--- a/express-socket/package.json
+++ b/express-socket/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "http": "^0.0.1-security",
+    "redis": "^4.0.3",
     "socket.io": "^2.3.0"
   }
 }
