--- a/express-socket/package.json
+++ b/express-socket/package.json
@@ -13,9 +13,13 @@
     "axios": "^0.24.0",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "date-and-time": "^2.2.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "firebase": "^9.6.8",
+    "firebase-admin": "^10.0.2",
     "http": "^0.0.1-security",
+    "lodash.clonedeep": "^4.5.0",
     "redis": "^4.0.3",
     "socket.io": "^2.3.0"
   }
